removed legacy /admin endpoints. All admin endpoint handling is done internally in /dashboard/api/v1 and should not be exposed publicly or in the documentation
